[package]
name = "rust-xfinal"
version = "0.8.11"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A safe and simplely used web framework"
homepage = "https://github.com/xmh0511/rust-xfinal"
readme = "README.md"
repository = "https://github.com/xmh0511/rust-xfinal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-xfinal-macro="0.1.0"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]