[package]
name = "rust-xfinal"
version = "0.8.18"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A safe and simplely used web server framework"
homepage = "https://github.com/xmh0511/rust-xfinal"
readme = "README.md"
repository = "https://github.com/xmh0511/rust-xfinal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-xfinal-macro="0.1.2"
tera = "1.17.0"
serde_json = "1.0.85"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.3"
hex-literal = "0.3.4"
expedite = "0.1.0"
chrono = "0.4.22"
chrono-tz = "0.6.3"
multimap = "0.8.3"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]